# data-invest-sense

./: .editorconfig  .gitignore  Makefile  README.md  Tiltfile  docker-compose.yml  go.work  go.work.sum  nx.json  package-lock.json  package.json  pyproject.toml  temp-istio-deployment.yaml  tsconfig.base.json
.docker/hive/conf/: metastore-site.xml
.docker/trino/etc/catalog/: minio.properties
apps/apis/lake-manager/: Dockerfile  Dockerfile.prod  docker-compose.yaml  go.mod  go.sum  project.json  test.db
apps/apis/lake-manager/configs/: config.go
apps/apis/lake-manager/docs/: docs.go  swagger.json  swagger.yaml
apps/apis/lake-manager/test/: product.http  user.http
apps/infra/k8s/: project.json
apps/infra/k8s/namespace/: namespace.yaml  security.yaml
apps/ingestors/file-downloader/: .coverage  Dockerfile  README.md  project.json  pyproject.toml
apps/ingestors/file-downloader/file_downloader/: __init__.py  main.py
apps/ingestors/file-downloader/file_downloader/configs/: loader.py
apps/ingestors/file-downloader/file_downloader/configs/br/job_id/: job-config.json
apps/ingestors/file-downloader/file_downloader/configs/br/new_job_id/: job-config.json
apps/ingestors/file-downloader/file_downloader/configs/us/job_id/: job-config.json
apps/ingestors/file-downloader/file_downloader/consumer/: event.py  event_handler.py
apps/ingestors/file-downloader/file_downloader/controller/: controller.py
apps/ingestors/file-downloader/file_downloader/controller/events/: event.py
apps/ingestors/file-downloader/file_downloader/controller/events/listeners/: kafka_listener.py  mongo_listener.py
apps/ingestors/file-downloader/file_downloader/decorators/: concurrency.py
apps/ingestors/file-downloader/file_downloader/event/: event.py  event_handler.py
apps/ingestors/file-downloader/file_downloader/jobs/: jobs.py
apps/ingestors/file-downloader/file_downloader/jobs/handlers/: handlers.py
apps/ingestors/file-downloader/file_downloader/jobs/handlers/dummy/: job.py
apps/ingestors/file-downloader/file_downloader/jobs/handlers/zip_handler/: job.py
apps/ingestors/file-downloader/file_downloader/scheduler/: scheduler.py
apps/ingestors/file-downloader/tests/: test_main.py
apps/ingestors/file-unzipper/: Dockerfile.prod  go.mod  project.json
apps/lake-manager/: go.mod  go.sum  gqlgen.yml  project.json
apps/lake-manager/cmd/server/: main.go  wire.go  wire_gen.go
apps/lake-manager/configs/: config.go
apps/lake-manager/pkg/events/: event_dispatcher_test.go
apps/lake-manager/pkg/uid/: uid.go
apps/lake-orchestration/lake-controller/: Dockerfile.prod  go.mod  go.sum  gqlgen.yml  project.json
apps/lake-orchestration/lake-controller/configs/: ceaf.json  cnep.json
apps/lake-orchestration/lake-controller/test/: config.http
apps/lake-orchestration/lake-events/: Dockerfile.prod  go.mod  project.json
apps/lake-orchestration/lake-gateway/: Dockerfile.prod  go.mod  go.sum  gqlgen.yml  project.json
apps/lake-orchestration/lake-gateway/docs/: asyncapi.yml
apps/lake-orchestration/lake-gateway/test/: input.http
apps/lake-orchestration/lake-repository/: go.mod  go.sum  gqlgen.yml  project.json  tools.go
apps/lake-orchestration/lake-repository/test/: schema.http
apps/transformers/spark-batch/: README.md  project.json  pyproject.toml
apps/transformers/spark-batch/spark_batch/: hello.py
apps/transformers/spark-batch/tests/: test_hello.py
diagrams/c4/: temp.puml
libs/api-client/golang/go-controller/: api-client-golang-go-controller.go  api-client-golang-go-controller_test.go  client.go  go.mod  project.json
libs/api-client/golang/go-gateway/: client.go  go.mod  project.json
libs/api-client/golang/go-repository/: api-client-golang-go-repository.go  api-client-golang-go-repository_test.go  client.go  go.mod  project.json
libs/api-client/python/py-controller/: README.md  project.json  pyproject.toml
libs/api-client/python/py-youtube/: README.md  project.json  pyproject.toml
libs/dtos/golang/dto-controller/: go.mod  project.json
libs/dtos/golang/dto-events/: go.mod  project.json
libs/dtos/golang/dto-gateway/: go.mod  project.json
libs/dtos/golang/dto-repository/: go.mod  project.json
libs/golang/events/: event_dispatcher.go  event_dispatcher_test.go  go.mod  interface.go  project.json
libs/golang/go-config/: go.mod  project.json
libs/golang/go-config/configs/: config.go
libs/golang/go-json-schema/: go.mod  project.json  raw_schema_validation.go
libs/golang/go-jwt/: go.mod  project.json
libs/golang/go-jwt/jwt/: gojwt.go  gojwt_test.go
libs/golang/go-mongodb/: go.mod  project.json
libs/golang/go-mongodb/client/: mongodb.go
libs/golang/go-rabbitmq/: go.mod  project.json
libs/golang/go-rabbitmq/queue/: rabbitmq.go
libs/golang/go-request/: go.mod  project.json  request.go
libs/golang/goid/: go.mod  project.json
libs/golang/service-discovery/: go.mod  project.json
libs/nx-plugins/repo-settings/: README.md  executors.json  jest.config.ts  package.json  project.json
libs/python/core/: .coverage  README.md  project.json  pyproject.toml
libs/python/core/core/loaders/: __init__.py  config_loader.py
libs/python/core/tests/loaders/: test_config_loader.py
libs/python/core/tests/reference_files/configs/br/job_id/: job-config.json
libs/python/pydotenv/: .coverage  README.md  project.json  pyproject.toml
libs/python/pydotenv/pydotenv/: __init__.py  dotenv.py
libs/python/pydotenv/tests/: test_dotenv.py
libs/python/pylog/: .coverage  README.md  project.json  pyproject.toml
libs/python/pylog/pylog/: __init__.py  log.py
libs/python/pylog/tests/: test_log.py
libs/python/pyrabbitmq/: .coverage  README.md  project.json  pyproject.toml
libs/python/pyrabbitmq/pyrabbit/: __init__.py  base.py  consumer.py
libs/python/pyrabbitmq/tests/: test_consumer.py
libs/python/pyrepository/: README.md  project.json  pyproject.toml
libs/python/pyrequest/: README.md  project.json  pyproject.toml
libs/python/pysd/: README.md  project.json  pyproject.toml
libs/python/pysd/pysd/: __init__.py  service_discovery.py
(+215 files in other folders)
