[tool.coverage.run]
branch = true
source = [ "core" ]

[tool.coverage.report]
exclude_lines = [ "if TYPE_CHECKING:" ]
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov --cov-fail-under=85 --cov-report html:'../../../coverage/libs/python/core/html' --cov-report xml:'../../../coverage/libs/python/core/coverage.xml' --html='../../../reports/libs/python/core/unittests/html/index.html' --junitxml='../../../reports/libs/python/core/unittests/junit.xml'"

[tool.poetry]
name = "core"
version = "1.0.0"
description = "Core"
authors = [ ]
license = "Proprietary"
readme = "README.md"

  [[tool.poetry.packages]]
  include = "core"

  [tool.poetry.dependencies]
  python = ">=3.9,<3.11"

    [tool.poetry.dependencies.pylog]
    path = "../pylog"
    develop = true

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"
