[tool.coverage.run]
branch = true
source = [ "pydotenv" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov --cov-fail-under=90 --cov-report html:'../../../coverage/libs/python/pydotenv/html' --cov-report xml:'../../../coverage/libs/python/pydotenv/coverage.xml' --html='../../../reports/libs/python/pydotenv/unittests/html/index.html' --junitxml='../../../reports/libs/python/pydotenv/unittests/junit.xml'"

[tool.poetry]
name = "pydotenv"
version = "1.0.0"
description = "Dotenv"
authors = [ ]
license = 'Proprietary'
readme = 'README.md'

  [[tool.poetry.packages]]
  include = "pydotenv"

  [tool.poetry.dependencies]
  python = ">=3.9,<3.11"
  python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
